--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
+  "homepage":"https://prajwal-sankadavar.github.io/TODO-React/",
   "name": "todo_app",
   "version": "0.1.0",
   "private": true,
-  "homepage":"http:// Prajwal-Sankadavar.github.io/TODO-React",
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
